# yudai-evmbench-forest

./: .env.example  .gitignore  README.md  VERIFY.md  pyproject.toml
docker/: live-contract-tools.Dockerfile
examples/agent-workspace/: AGENTS.md
examples/agent-workspace/audit/contracts/: VulnerableVault.sol
scripts/: run_evmbench_forest.py
src/yudai_evmbench_forest/: __init__.py  cli.py  evmbench_project.py  sync.py
src/yudai_evmbench_forest/resources/evmbench/: Dockerfile.yudai
src/yudai_evmbench_forest/resources/evmbench/agents/: agent.py  modal_runner.py
src/yudai_evmbench_forest/resources/evmbench/agents/mini-swe-agent/: config.yaml  modal_baseline.py  modal_forest.py
src/yudai_evmbench_forest/resources/evmbench/agents/yudai-modal-forest/: config.yaml  entrypoint.py  forest_runner.py  modal_runtime.py  modal_swerex_compat.py  review_prompts.py  role_selection.py  run_container_agent.sh
src/yudai_evmbench_forest/resources/evmbench/nano/: solver.py
tests/: test_evmbench_project.py  test_sync.py
