[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yudai-evmbench-forest"
version = "0.1.0"
description = "Lean EVMBench Forest-of-Thought multi-agent Modal runner for yudai mini-swe-agent"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.md"}
dependencies = [
    "pyyaml",
    "requests",
    "jinja2",
    "pydantic>=2.0",
    "litellm>=1.75.5",
    "tenacity",
    "rich",
    "python-dotenv",
    "typer",
    "platformdirs",
    "textual",
    "prompt_toolkit",
    "openai!=1.100.0,!=1.100.1",
    "modal>=1.4.1",
    "swe-rex>=1.4.0",
]

[project.scripts]
yudai-evmbench-forest = "yudai_evmbench_forest.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["minisweagent*", "yudai_evmbench_forest*"]

[tool.setuptools.package-data]
minisweagent = ["config/**/*"]
yudai_evmbench_forest = ["resources/**/*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"
