[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yudai-evmbench-forest"
version = "0.1.0"
description = "Lean EVMBench Forest-of-Thought Modal runner for Yudai smart-contract audits"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = [
    "mini-swe-agent[modal]>=2.2.8",
    "modal>=1.4.1",
    "python-dotenv",
    "typer>=0.12",
    "swe-rex>=1.4.0",
]

[project.scripts]
yudai-evmbench-forest = "yudai_evmbench_forest.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["yudai_evmbench_forest*"]

[tool.setuptools.package-data]
yudai_evmbench_forest = ["resources/**/*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"
